--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+  <title>Резюме</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="https://avatars.dzeninfra.ru/get-zen_doc/1880939/pub_5dfb4b74ec575b00b05f68fc_5e9f13ad2bf35767fbb1f436/scale_1200">
 </head>
 <body>
-  
+  Резюме на работу дизайнером 
+  ФИО: Цыпина Анастасия Сергеевна 
+  дата рождения: 2010
+  способы связи:
+  телефон +77700770770
+  почта nastey09042010@gamil.com
+  telegram @nasta0904
   
 </body>
 </html>
