--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
   <link rel="icon" href="https://avatars.dzeninfra.ru/get-zen_doc/1880939/pub_5dfb4b74ec575b00b05f68fc_5e9f13ad2bf35767fbb1f436/scale_1200">
 </head>
 <body>
-  Резюме на работу дизайнером 
-  ФИО: Цыпина Анастасия Сергеевна 
-  дата рождения: 2010
-  способы связи:
-  телефон +77700770770
-  почта nastey09042010@gamil.com
-  telegram @nasta0904
-  
+  Резюме на работу дизайнером<br>
+  ФИО: Цыпина Анастасия Сергеевна <br>
+  дата рождения: 2010<br>
+
+
+    <div class="footer-section">
+                    <h4>способы связи:</h4>
+                  <p>телефон +77700770770</p>
+                    <p>Email:  nastey09042010@gamil.com</p>
+                    <p>Телефон: +7 (999) 999-99-99</p>
+                </div>
+                <div class="footer-section">
 </body>
 </html>
