--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
   <link rel="icon" href="https://avatars.dzeninfra.ru/get-zen_doc/1880939/pub_5dfb4b74ec575b00b05f68fc_5e9f13ad2bf35767fbb1f436/scale_1200">
 </head>
 <body>
+
+
+   <header class="header">
+        <div class="container">
+            <div class="header-content">
+                <div class="logo">
+                    <h1>Резюме на работу дизайнером.</h1>
+                </div>
+                <nav class="nav">
+                    <ul class="nav-list">
+                        <li><a href="#">кто я?</a></li>
+                        <li><a href="#">Портфолио</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+  
   Резюме на работу дизайнером<br>
   ФИО: Цыпина Анастасия Сергеевна <br>
   дата рождения: 2010<br>
