--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <h1>Резюме на работу дизайнером.</h1>
+                    <h1>Резюме на работу дизайнером</h1>
                 </div>
                 <nav class="nav">
                     <ul class="nav-list">
@@ -26,7 +26,6 @@
     </header>
 
   
-  Резюме на работу дизайнером<br>
   ФИО: Цыпина Анастасия Сергеевна <br>
   дата рождения: 2010<br>
 
