--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
     </header>
 
   
-  ФИО: Цыпина Анастасия Сергеевна <br>
-  дата рождения: 2010<br>
-
+Цыпина Анастасия Сергеевна 2010 года рождения<br>
+  Я занимаюсь дизайном сайтов 3 года. Специализируюсь на создании сайтов и их дизайне, <br>
+  на таких платформах как:
+ <h1> <ol>
+    <li>
+      <a href="https://www.figma.com/design/utM6fqKQ0e3C8Vrt7QUIfM/intensive?node-id=0-1&t=tZPSvWWfS9oUS2CK-1">Figma</a>
+    </li>
+  </ol>
+</h1>
 
     <div class="footer-section">
                     <h4>способы связи:</h4>
