--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     <li>
       <a href="https://www.figma.com/design/utM6fqKQ0e3C8Vrt7QUIfM/intensive?node-id=0-1&t=tZPSvWWfS9oUS2CK-1">Figma</a>
     </li>
+   <li>
+      <a href=https://tsypina2024.wordpress.com/%d1%81%d0%b0%d0%b9%d1%82-%d0%b2%d0%be%d1%80%d0%b4%d0%bf%d1%80%d0%b5%d1%81%d1%81/>WordPress</a>
+   </li>
+   <li>
+     
+   </li>
   </ol>
 </h1>
 
