--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <h1>Резюме на работу дизайнером</h1>
+                    <h1>Резюме на работу дизайнером</h1> <br>
                 </div>
                 <nav class="nav">
                     <ul class="nav-list">
